Finally fixed clipping issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,9 +54,7 @@ body{
   animation-fill-mode: forwards;
   z-index: 2;
   text-align:center;
-  border-radius: 50%;
-  overflow: hidden;
-  clip-path: circle(49% at 50% 50%);
+  clip-path: url(#clipContent);
 }
 
 .clipped img{
@@ -367,22 +365,34 @@ body{
 }
 
 
-@media screen and (max-height:800px){
-
-  .title-wrapper{
-    transform: scale(0.8);
-  }
+@media screen and (max-height:400px){
 
   #maincontentwrapper{
-    transform: scale(0.8);
+    transform: scale(0.6);
   }
 
   #buttoncontainer{
-    transform: scale(0.8);
+    transform: scale(0.6);
+  }
+
+}
+
+@media screen and (max-height:800px){
+
+  .title-wrapper{
+    transform: scale(0.6);
+  }
+
+  #maincontentwrapper{
+    transform: scale(0.6);
+  }
+
+  #buttoncontainer{
+    transform: scale(0.6);
   }
 
   #footer{
-    transform: scale(0.8);
+    transform: scale(0.6);
   }
 
   #about-div{
